--- a/maamhaidee/src/app/intro/intro.component.html
+++ b/maamhaidee/src/app/intro/intro.component.html
@@ -1,1 +1,22 @@
-<p>intro works!</p>
+<div id="header">
+    <div class="container">
+        <nav>
+            <img src="images/logo.png" class="logo">
+            <ul id="sidemenu">
+                <li><a href="#header">Home</a></li>
+                <li><a href="#about">Who am I?</a></li>
+                <li><a href="#services">My Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#kontakting">Contact Me</a></li>
+                <li id="clock"></li>
+
+                <i class="fas fa-times" onclick="closemenu()"></i>
+            </ul>
+            <i class="fas fa-bars" onclick="openmenu()"></i>
+        </nav>
+        <div class="header-text">
+            <p>Software Engineer, Business Owner, and Commercial Pilot</p>
+            <h1>Hello guys, It's me!<br>I'm <span>Adriaan</span>, from the Philippines.</h1>
+        </div>
+    </div>
+</div>
