--- a/maamhaidee/src/app/portfolio/portfolio.component.html
+++ b/maamhaidee/src/app/portfolio/portfolio.component.html
@@ -1,1 +1,81 @@
-<p>portfolio works!</p>
+<div id="about">
+    <div class="container">
+        <div class="row">
+            <div class="about-col-1">
+                 <img src="images/1.jpg">
+            </div>
+            <div class="about-col-2">
+                <div class="transparent-box">
+                    <h1 class="sub-title">&nbsp&nbspAbout Me</h1>
+                    <p> Hello! I am Adriaan M. Dimate, a 43 year old senior first officer as of this time of writing.<br> 
+                        I am a person diagnosed with Autism Spectrum Disorder since childhood.</br>
+                        I love programming, flying and learning new stuff ahead of time ^ ^<br>
+                        Ready to serve your computing and flying needs!</br>
+                    </p>
+                    <p><a href="https://moralesbucketlist.netlify.app/" target="_blank" class="btn">Learn more about me</a></p>
+
+                    <div class="tab-titles">
+                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                        <p class="tab-links" onclick="opentab('experiences')">Experiences</p>
+                        <p class="tab-links" onclick="opentab('education')">Education</p>
+                    </div>
+                    <div class="tab-contents active-tab" id="skills">
+                        <ul>
+                            <br>
+                            <li><span><b>Senior First Officer</b></span><br>Flying long and short haul routes globally</br></li>
+                            <li><span><b>Web Development</b></span><br>Web Applications Development</br></li>
+                            <li><span><b>Application Development</b></span><br>Windows, Android and IOS app buiilding</br></li>
+                            <li><span><b>PC Building, Troubleshooting and Disassembly</b></span><br>Hardware Build and Maintenance</li>
+                            <li><span><b>C, C++, C#, Assembly, Python, Java, Javascript, HTML, CSS, SQL, and PHP</b></span><br>Experienced Programming/Markup Languages</li>
+                            <li><span><b>A350-900, A330-300, A320-200NEO/CEO, A321-200</b></span><br>Airbus Planes Type Rated</li>
+                            <li><span><b>B737-800; B777-300ER; B777X, B787-800</b></span><br>Boeing Planes Type Rated</li>
+                            <li><span><b>Cessna 150, Cessna Citation X, Cessna 172, Embraer E190, Bombardier CRJ-900, Cessna 206</b></span><br>Other Planes with Experiences</li>
+                            </br>    
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="experiences">
+                        <ul>
+                            <br>
+                            <li><span><b>April 2042-Present</b></span><br>Senior First Officer</br>
+                            <span>Philippine Airlines</span></li>
+                            <li><span><b>May 2038-April 2042</b></span><br>Junior First Officer</br>
+                            <span>Philippine Airlines</span></li>
+                            <li><span><b>December 2035-April 2038</b></span><br>Limited First Officer</br>
+                                <span>Philippine Airlines</span></li>
+                            <li><span><b>May 2034-Present</b></span><br>Software Developer/Owner</br>
+                                <span>DimaPC! Store Business</span></li>
+                            <li><span><b>September 2031-October 2035</b></span><br>Senior Software Engineer</br>
+                                <span>Azeus Group of Companies</span></li>
+                            <li><span><b>October 2027-August 2031</b></span><br>Junior Software Engineer</br>
+                                <span>Azeus Group of Companies</span></li>
+                            <li><span><b>2023-2026</b></span><br>Software Developer/Co-Owner</br>
+                                <span>TDA Car Rental Co.</span></li>
+                            </br>    
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="education">
+                        <ul>
+                            <br>
+                            <li><span><b>2036-2038</b></span><br>University of the Philippines - Diliman Campus</br>
+                                <span><i>Master of Science in Computer Science</i></span><br>
+                                <span>Cum Laude</span></br></li>
+                            <li><span><b>2031-2033</b></span><br>Laminar Aviation Inc.</br>
+                                <span><i>Airline Transport Pilot Course</i></span><br>
+                                <span>Completer</span></br></li>
+                            <li><span><b>2027-2031</b></span><br>Philippine State College of Aeronauics</br>
+                                <span><i>Bachelor of Science in Air Transportation</i></span><br>
+                                <span>Summa Cum Laude</span></br></li>
+                            <li><span><b>2023-2027</b></span><br>Gordon College</br>
+                                <span><i>Bachelor of Science in Computer Science</i></span><br>
+                                <span>Cum Laude</span></br></li>
+                            <li><span><b>2017-2023</b></span><br>Regional Science High School III</br>
+                                <span>With Honors</span></li>
+                            
+                            </br>    
+                        </ul>
+                    </div>
+                </div>    
+            </div>
+        </div>
+    </div>
+</div>
