--- a/maamhaidee/src/app/services/services.component.html
+++ b/maamhaidee/src/app/services/services.component.html
@@ -1,1 +1,26 @@
-<p>services works!</p>
+<!------services------>
+<div id="services">
+    <div class="container">
+        <h1 class="sub-title">My Services</h1>
+        <div class="services-list">
+            <div>
+                <i class="fa-solid fa-robot"></i>
+                <h2>Android/iOS App Development</h2>
+                <p>I develop android applications that are tailored and customized to my customers' needs.</p>
+                <a href="#">Find Out More</a>
+            </div>
+            <div>
+                <i class="fa-solid fa-code-fork"></i>
+                <h2>Website Development</h2>
+                <p>To augment the applications, I also create websites and website applications as ordered by the customer.</p>
+                <a href="#">Find Out More</a>
+            </div>
+            <div>
+                <i class="fa-solid fa-desktop"></i>
+                <h2>Personal Computer Parts, Repair, and Building</h2>
+                <p>As part of my business, I personally build customized personal computers for my customers.</p>
+                <a href="#">Find Out More</a>
+            </div>
+        </div>
+    </div>
+</div>
