--- a/maamhaidee/src/app/contact/contact.component.html
+++ b/maamhaidee/src/app/contact/contact.component.html
@@ -1,1 +1,34 @@
-<p>contact works!</p>
+<!--contact-->
+<div id="kontakting"> 
+    <div class="kontak">
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h1 class="sub-title">Contact Me Here</h1>
+                    <p><i class="fa-regular fa-paper-plane"></i>&nbspEmail: amdimate43@gmail.com</p>
+                    <p><i class="fa-solid fa-phone"></i>&nbspPhone: +63 945 394 5299</p>
+                    <div class="social-icons">
+                        <a href="https://www.facebook.com/philippine8129heavy"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://youtube.com/@flightspasta1315?si=ncDgGiKYidzt9SsW"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="https://discord.gg/T7fvxwU8SW"><i class="fa-brands fa-discord"></i></a>
+                        <a href="https://www.instagram.com/apy023h/"><i class="fa-brands fa-instagram"></i></a>
+                    </div>
+                    <a href="CV-FINAL Resume.pdf" download class="btn btn2">Download CV/Resume Here</a>
+                    <a href="Hidocos.asm" download class="btn btn3">Click for a surprise!</a>
+                </div>
+                <div class="contact-right">
+                    <form name="submit-to-google-sheet">
+                        <input type="text" name="Name" placeholder="Name:" required>
+                        <input type="email" name="Email" placeholder="Email:" required>
+                        <textarea name="Message" rows="7" placeholder="Message to me:"></textarea>
+                        <button type="submit" class="btn btn2">Submit</button>
+                    </form>
+                    <span id="msg"></span>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>Copyright @ Adriaan Dimate. All Rights reserved.</p>
+        </div>
+    </div>
+</div>
