--- a/maamhaidee/src/styles.css
+++ b/maamhaidee/src/styles.css
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* Global and phone viewing */
 
 *{
     margin: 0;
